--- a/index.html
+++ b/index.html
@@ -12,14 +12,17 @@
 <body>
     <div class="container">
         <h1>Get it done</h1>
+
+        <!-- **** NOT WORKING **** -->
         <form class="" action="index.html" method="post">
             <div class="input-group mb-3" id="inputWrapper">
                 <div class="input-group-prepend">
-                    <button id="inputSubmit" class="btn btn-outline-secondary" type="submit"><i class="fas fa-plus"></i></button>
+                <button type="button" class="btn btn-outline-secondary"><i class="fas fa-plus"></i></button>
                 </div>
-                <input id="userInput" type="text" class="form-control" placeholder="Type what you want to get done here..." aria-describedby="basic-addon1">
+                <input class="col-11" type="text" placeholder="Numbers here..."id="numbers" aria-describedby="basic-addon1">
             </div>
         </form>
+
         <div class="form-check was-validated">
             <div class="custom-control custom-checkbox mb-3">
                 <input type="checkbox" class="custom-control-input" id="customControlValidation1" required>
@@ -34,6 +37,7 @@
                 <label class="custom-control-label" for="customControlValidation3">Bring in washing</label>
             </div>
         </div>
+
     </div>
     <!-- <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script> -->
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
