got user input to come out as a list working!

--- a/index.html
+++ b/index.html
@@ -19,23 +19,23 @@
                 <div class="input-group-prepend">
                 <button type="button" class="btn btn-outline-secondary"><i class="fas fa-plus"></i></button>
                 </div>
-                <input class="col-11" type="text" placeholder="Numbers here..."id="numbers" aria-describedby="basic-addon1">
+                <input class="col-11" type="text" placeholder="Write something down here..." id="userInput" aria-describedby="basic-addon1">
             </div>
         </form>
 
         <div class="form-check was-validated">
             <div class="custom-control custom-checkbox mb-3">
                 <input type="checkbox" class="custom-control-input" id="customControlValidation1" required>
-                <label class="custom-control-label" for="customControlValidation1">Clean the house</label>
+                <!-- <label class="custom-control-label" for="customControlValidation1"> -->
             </div>
-            <div class="custom-control custom-checkbox mb-3">
+            <!-- <div class="custom-control custom-checkbox mb-3">
                 <input type="checkbox" class="custom-control-input" id="customControlValidation2" required>
                 <label class="custom-control-label" for="customControlValidation2">Feed fish</label>
             </div>
             <div class="custom-control custom-checkbox mb-3">
                 <input type="checkbox" class="custom-control-input" id="customControlValidation3" required>
                 <label class="custom-control-label" for="customControlValidation3">Bring in washing</label>
-            </div>
+            </div> -->
         </div>
 
     </div>
