changed JS to use counter and newItem variable to put on multiple lines for code readability (not functional yet)

--- a/index.html
+++ b/index.html
@@ -12,20 +12,18 @@
 <body>
     <div class="container">
         <h1>Get it done</h1>
-
-        <!-- **** NOT WORKING **** -->
         <form class="" action="index.html" method="post">
             <div class="input-group mb-3" id="inputWrapper">
                 <div class="input-group-prepend">
-                <button type="button" class="btn btn-outline-secondary"><i class="fas fa-plus"></i></button>
+                    <button type="button" class="btn btn-outline-secondary"><i class="fas fa-plus"></i></button>
                 </div>
                 <input class="col-11" type="text" placeholder="Write something down here..." id="userInput" aria-describedby="basic-addon1">
             </div>
         </form>
 
         <div class="form-check was-validated">
-            <div class="custom-control custom-checkbox mb-3">
-                <input type="checkbox" class="custom-control-input" id="customControlValidation1" required>
+            <div class="custom-control custom-checkbox mb-3" id="listItemWrapper">
+                <!-- <input type="checkbox" class="custom-control-input" id="customControlValidation1" required> -->
                 <!-- <label class="custom-control-label" for="customControlValidation1"> -->
             </div>
             <!-- <div class="custom-control custom-checkbox mb-3">
