--- a/index.html
+++ b/index.html
@@ -20,21 +20,22 @@
                 <input class="col-11" type="text" placeholder="Write something down here..." id="userInput" aria-describedby="basic-addon1">
             </div>
         </form>
-
-        <div class="form-check was-validated">
-            <div class="custom-control custom-checkbox mb-3" id="listItemWrapper">
-                <!-- <input type="checkbox" class="custom-control-input" id="customControlValidation1" required> -->
-                <!-- <label class="custom-control-label" for="customControlValidation1"> -->
-            </div>
-            <!-- <div class="custom-control custom-checkbox mb-3">
-                <input type="checkbox" class="custom-control-input" id="customControlValidation2" required>
-                <label class="custom-control-label" for="customControlValidation2">Feed fish</label>
-            </div>
+        <form class="was-validated">
             <div class="custom-control custom-checkbox mb-3">
-                <input type="checkbox" class="custom-control-input" id="customControlValidation3" required>
-                <label class="custom-control-label" for="customControlValidation3">Bring in washing</label>
-            </div> -->
-        </div>
+                <div class="custom-control custom-checkbox mb-3" id="listItemWrapper">
+                    <!-- <input type="checkbox" class="custom-control-input" id="customControlValidation1" required> -->
+                    <!-- <label class="custom-control-label" for="customControlValidation1"> -->
+                </div>
+                <!-- <div class="custom-control custom-checkbox mb-3">
+                    <input type="checkbox" class="custom-control-input" id="customControlValidation2" required>
+                    <label class="custom-control-label" for="customControlValidation2">Feed fish</label>
+                </div>
+                <div class="custom-control custom-checkbox mb-3">
+                    <input type="checkbox" class="custom-control-input" id="customControlValidation3" required>
+                    <label class="custom-control-label" for="customControlValidation3">Bring in washing</label>
+                </div> -->
+            </div>
+      </form>
 
     </div>
     <!-- <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script> -->
