Remove list item working - not dynamically yet though

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <form class="" action="index.html" method="post">
             <div class="input-group mb-3" id="inputWrapper">
                 <div class="input-group-prepend">
-                    <button type="button" class="btn btn-outline-secondary"><i class="fas fa-plus"></i></button>
+                    <button type="button" id="addItemButton" class="btn btn-outline-secondary"><i class="fas fa-plus"></i></button>
                 </div>
                 <input class="col-11" type="text" placeholder="Write something down here..." id="userInput" aria-describedby="basic-addon1">
             </div>
@@ -29,10 +29,15 @@
                 <!-- <div class="custom-control custom-checkbox mb-3">
                     <input type="checkbox" class="custom-control-input" id="customControlValidation2" required>
                     <label class="custom-control-label" for="customControlValidation2">Feed fish</label>
-                </div>
-                <div class="custom-control custom-checkbox mb-3">
+                </div> -->
+                <div class="custom-control custom-checkbox mb-3" id="itemWrapper" >
                     <input type="checkbox" class="custom-control-input" id="customControlValidation3" required>
                     <label class="custom-control-label" for="customControlValidation3">Bring in washing</label>
+                    <button type="button" name="button" id="removeButton">Remove</button>
+                </div>
+                <!-- <div class="checkbox">
+                    <label for="checkbox1">Text goes here</label>
+                    <input type="checkbox" id="checkbox1" class="checkbox style-2 pull-right" checked="checked"/>
                 </div> -->
             </div>
       </form>
