--- a/index.html
+++ b/index.html
@@ -29,11 +29,13 @@
                 <!-- <div class="custom-control custom-checkbox mb-3">
                     <input type="checkbox" class="custom-control-input" id="customControlValidation2" required>
                     <label class="custom-control-label" for="customControlValidation2">Feed fish</label>
+                    <button type="button" name="button" class="removeButton">Remove</button>
+
                 </div> -->
                 <div class="custom-control custom-checkbox mb-3" id="itemWrapper" >
                     <input type="checkbox" class="custom-control-input" id="customControlValidation3" required>
                     <label class="custom-control-label" for="customControlValidation3">Bring in washing</label>
-                    <button type="button" name="button" id="removeButton">Remove</button>
+                    <button type="button" name="button" class="removeButton">Remove</button>
                 </div>
                 <!-- <div class="checkbox">
                     <label for="checkbox1">Text goes here</label>
