--- a/index.html
+++ b/index.html
@@ -32,11 +32,11 @@
                     <button type="button" name="button" class="removeButton">Remove</button>
 
                 </div> -->
-                <div class="custom-control custom-checkbox mb-3" id="itemWrapper" >
+                <!-- <div class="custom-control custom-checkbox mb-3" id="itemWrapper" >
                     <input type="checkbox" class="custom-control-input" id="customControlValidation3" required>
                     <label class="custom-control-label" for="customControlValidation3">Bring in washing</label>
                     <button type="button" name="button" class="removeButton">Remove</button>
-                </div>
+                </div> -->
                 <!-- <div class="checkbox">
                     <label for="checkbox1">Text goes here</label>
                     <input type="checkbox" id="checkbox1" class="checkbox style-2 pull-right" checked="checked"/>
