--- a/index.html
+++ b/index.html
@@ -26,13 +26,13 @@
                     <!-- <input type="checkbox" class="custom-control-input" id="customControlValidation1" required> -->
                     <!-- <label class="custom-control-label" for="customControlValidation1"> -->
                 </div>
+                <!-- Static list Items -->
                 <!-- <div class="custom-control custom-checkbox mb-3">
                     <input type="checkbox" class="custom-control-input" id="customControlValidation2" required>
                     <label class="custom-control-label" for="customControlValidation2">Feed fish</label>
                     <button type="button" name="button" class="removeButton">Remove</button>
-
-                </div> -->
-                <!-- <div class="bla custom-control custom-checkbox mb-3" id="itemWrapper" >
+                </div>
+                <div class="bla custom-control custom-checkbox mb-3" id="itemWrapper" >
                     <input type="checkbox" class="custom-control-input" id="customControlValidation3" required>
                     <label class="custom-control-label" for="customControlValidation3">Bring in washing</label>
                     <button type="button" name="button" class="removeButton">Delete</button>
@@ -45,6 +45,6 @@
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/js/bootstrap.min.js" integrity="sha384-smHYKdLADwkXOn1EmN1qk/HfnUcbVRZyYmZ4qpPea6sjB/pTJ0euyQp0Mk8ck+5T" crossorigin="anonymous"></script>
-    <script type="text/javascript" src="js/script.js"></script>
+    <script type="text/javascript" src="js/objectOrientatedJS.js"></script>
 </body>
 </html>
